Experimented with Dart Sass, made codebase more compaitible and then moved back to libsass.  These changes would help prototype kit team and are a step closer to supporting Dart Sass on frontend project.

--- a/package/govuk/components/checkboxes/_index.scss
+++ b/package/govuk/components/checkboxes/_index.scss
@@ -1,3 +1,5 @@
+@import "../../tools/compatible-math";
+
 @import "../error-message/index";
 @import "../fieldset/index";
 @import "../hint/index";
@@ -30,7 +32,7 @@
   }
 
   .govuk-checkboxes__input {
-    $input-offset: ($govuk-touch-target-size - $govuk-checkboxes-size) / 2;
+    $input-offset: divideby($govuk-touch-target-size - $govuk-checkboxes-size, 2);
 
     cursor: pointer;
 
@@ -52,8 +54,8 @@
 
     @include govuk-if-ie8 {
       margin-top: 10px;
-      margin-right: $govuk-checkboxes-size / -2;
-      margin-left: $govuk-checkboxes-size / -2;
+      margin-right: divideby($govuk-checkboxes-size, -2);
+      margin-left: divideby($govuk-checkboxes-size, -2);
       float: left;
 
       // add focus outline to input
@@ -83,7 +85,7 @@
       left: 0;
       width: $govuk-checkboxes-size;
       height: $govuk-checkboxes-size;
-      border: $govuk-border-width-form-element solid currentColor;
+      border: $govuk-border-width-form-element solid currentcolor;
       background: transparent;
     }
 
@@ -180,7 +182,7 @@
   // to be an even number in order to be centred under the 40px checkbox or radio.
   $conditional-border-width: $govuk-border-width-narrow;
   // Calculate the amount of padding needed to keep the border centered against the checkbox.
-  $conditional-border-padding: ($govuk-checkboxes-size / 2) - ($conditional-border-width / 2);
+  $conditional-border-padding: divideby($govuk-checkboxes-size, 2) - divideby($conditional-border-width, 2);
   // Move the border centered with the checkbox
   $conditional-margin-left: $conditional-border-padding;
   // Move the contents of the conditional inline with the label
@@ -207,7 +209,7 @@
 
   .govuk-checkboxes--small {
 
-    $input-offset: ($govuk-touch-target-size - $govuk-small-checkboxes-size) / 2;
+    $input-offset: divideby($govuk-touch-target-size - $govuk-small-checkboxes-size, 2);
     $label-offset: $govuk-touch-target-size - $input-offset;
 
     .govuk-checkboxes__item {
@@ -288,7 +290,7 @@
 
     // Align conditional reveals with small checkboxes
     .govuk-checkboxes__conditional {
-      $margin-left: ($govuk-small-checkboxes-size / 2) - ($conditional-border-width / 2);
+      $margin-left: divideby($govuk-small-checkboxes-size, 2) - divideby($conditional-border-width, 2);
       margin-left: $margin-left;
       padding-left: $label-offset - ($margin-left + $conditional-border-width);
       clear: both;
