--- a/src/govuk/components/radios/_index.scss
+++ b/src/govuk/components/radios/_index.scss
@@ -1,3 +1,5 @@
+@import "../../tools/compatible-math";
+
 @import "../error-message/index";
 @import "../fieldset/index";
 @import "../hint/index";
@@ -33,7 +35,7 @@
   }
 
   .govuk-radios__input {
-    $input-offset: ($govuk-touch-target-size - $govuk-radios-size) / 2;
+    $input-offset: divideby($govuk-touch-target-size - $govuk-radios-size, 2);
 
     cursor: pointer;
 
@@ -55,8 +57,8 @@
 
     @include govuk-if-ie8 {
       margin-top: 10px;
-      margin-right: $govuk-radios-size / -2;
-      margin-left: $govuk-radios-size / -2;
+      margin-right: divideby($govuk-radios-size, -2);
+      margin-left: divideby($govuk-radios-size, -2);
       float: left;
 
       // add focus outline to input
@@ -189,7 +191,7 @@
   // to be an even number in order to be centred under the 40px checkbox or radio.
   $conditional-border-width: $govuk-border-width-narrow;
   // Calculate the amount of padding needed to keep the border centered against the radios.
-  $conditional-border-padding: ($govuk-radios-size / 2) - ($conditional-border-width / 2);
+  $conditional-border-padding: divideby($govuk-radios-size, 2) - divideby($conditional-border-width, 2);
   // Move the border centered with the radios
   $conditional-margin-left: $conditional-border-padding;
   // Move the contents of the conditional inline with the label
@@ -216,7 +218,7 @@
 
   .govuk-radios--small {
 
-    $input-offset: ($govuk-touch-target-size - $govuk-small-radios-size) / 2;
+    $input-offset: divideby($govuk-touch-target-size - $govuk-small-radios-size, 2);
     $label-offset: $govuk-touch-target-size - $input-offset;
 
     .govuk-radios__item {
@@ -296,7 +298,7 @@
 
     // Align conditional reveals with small radios
     .govuk-radios__conditional {
-      $margin-left: ($govuk-small-radios-size / 2) - ($conditional-border-width / 2);
+      $margin-left: divideby($govuk-small-radios-size, 2) - divideby($conditional-border-width, 2);
       margin-left: $margin-left;
       padding-left: $label-offset - ($margin-left + $conditional-border-width);
       clear: both;
