--- a/src/govuk/helpers/_typography.scss
+++ b/src/govuk/helpers/_typography.scss
@@ -2,6 +2,7 @@
 /// @group helpers/typography
 ////
 
+@import "../tools/compatible-math";
 @import "../tools/px-to-rem";
 
 /// 'Common typography' helper
@@ -78,7 +79,7 @@
 
 @function _govuk-line-height($line-height, $font-size) {
   @if not unitless($line-height) and unit($line-height) == unit($font-size) {
-    $line-height: $line-height / $font-size;
+    $line-height: divideby($line-height, $font-size);
   }
 
   @return $line-height;
