--- a/src/govuk/tools/_px-to-rem.scss
+++ b/src/govuk/tools/_px-to-rem.scss
@@ -16,5 +16,5 @@
     $value: $value * 1px;
   }
 
-  @return $value / $govuk-root-font-size * 1rem;
+  @return divideby($value, $govuk-root-font-size) * 1rem;
 }
