--- a/package/govuk/components/button/_index.scss
+++ b/package/govuk/components/button/_index.scss
@@ -1,3 +1,5 @@
+@import "../../tools/compatible-math";
+
 @include govuk-exports("govuk/component/button") {
   $govuk-button-colour: govuk-colour("green", $legacy: #00823b);
   $govuk-button-hover-colour: govuk-shade($govuk-button-colour, 20%);
@@ -32,7 +34,7 @@
     margin-right: 0;
     margin-left: 0;
     @include govuk-responsive-margin(6, "bottom", $adjustment: $button-shadow-size); // s2
-    padding: (govuk-spacing(2) - $govuk-border-width-form-element) govuk-spacing(2) (govuk-spacing(2) - $govuk-border-width-form-element - ($button-shadow-size / 2)); // s1
+    padding: (govuk-spacing(2) - $govuk-border-width-form-element) govuk-spacing(2) (govuk-spacing(2) - $govuk-border-width-form-element - divideby($button-shadow-size, 2)); // s1
     border: $govuk-border-width-form-element solid transparent;
     border-radius: 0;
     color: $govuk-button-text-colour;
@@ -276,8 +278,8 @@
     $offset: 2;
 
     .govuk-button {
-      padding-top: (govuk-spacing(2) - $govuk-border-width-form-element - ($button-shadow-size / 2) + $offset); // s1
-      padding-bottom: (govuk-spacing(2) - $govuk-border-width-form-element - ($button-shadow-size / 2) - $offset + 1); // s1
+      padding-top: (govuk-spacing(2) - $govuk-border-width-form-element - divideby($button-shadow-size, 2) + $offset); // s1
+      padding-bottom: (govuk-spacing(2) - $govuk-border-width-form-element - divideby($button-shadow-size, 2) - $offset + 1); // s1
     }
 
     .govuk-button__start-icon {
