--- a/package/govuk/components/footer/_index.scss
+++ b/package/govuk/components/footer/_index.scss
@@ -1,3 +1,5 @@
+@import "../../tools/compatible-math";
+
 @include govuk-exports("govuk/component/footer") {
 
   $govuk-footer-background: $govuk-canvas-background-colour;
@@ -8,7 +10,7 @@
   $govuk-footer-text: $govuk-text-colour;
   $govuk-footer-link-hover-colour: null; // Only used with the legacy palette
 
-  @if ($govuk-use-legacy-palette) {
+  @if $govuk-use-legacy-palette {
     $govuk-footer-border-top: #a1acb2;
     $govuk-footer-border: govuk-colour("grey-2");
     $govuk-footer-text: #454a4c;
@@ -19,8 +21,8 @@
   $govuk-footer-crest-image-width-2x: 250px;
   $govuk-footer-crest-image-height-2x: 204px;
   // Half the 2x image so that it fits the regular 1x size.
-  $govuk-footer-crest-image-width: ($govuk-footer-crest-image-width-2x / 2);
-  $govuk-footer-crest-image-height: ($govuk-footer-crest-image-height-2x / 2);
+  $govuk-footer-crest-image-width: divideby($govuk-footer-crest-image-width-2x, 2);
+  $govuk-footer-crest-image-height: divideby($govuk-footer-crest-image-height-2x, 2);
 
   .govuk-footer {
     @include govuk-font($size: 16);
@@ -35,7 +37,7 @@
   .govuk-footer__link {
     @include govuk-link-common;
 
-    @if ($govuk-use-legacy-palette) {
+    @if $govuk-use-legacy-palette {
       &:link,
       &:visited {
         color: $govuk-footer-text;
