--- a/package/govuk/components/skip-link/_index.scss
+++ b/package/govuk/components/skip-link/_index.scss
@@ -28,7 +28,7 @@
       background-color: $govuk-focus-colour;
 
       // Undo unwanted changes when global styles are enabled
-      @if ($govuk-global-styles) {
+      @if $govuk-global-styles {
         box-shadow: none;
       }
     }
