--- a/package/govuk/helpers/_typography.scss
+++ b/package/govuk/helpers/_typography.scss
@@ -2,6 +2,7 @@
 /// @group helpers/typography
 ////
 
+@import "../tools/compatible-math";
 @import "../tools/px-to-rem";
 
 /// 'Common typography' helper
@@ -23,7 +24,7 @@
   // We do not need to include the GDS Transport font-face declarations if
   // alphagov/govuk_template is being used since nta will already be included by
   // default.
-  @if ($govuk-include-default-font-face) {
+  @if $govuk-include-default-font-face {
     @include _govuk-font-face-gds-transport;
   }
 
@@ -78,7 +79,7 @@
 
 @function _govuk-line-height($line-height, $font-size) {
   @if not unitless($line-height) and unit($line-height) == unit($font-size) {
-    $line-height: $line-height / $font-size;
+    $line-height: divideby($line-height, $font-size);
   }
 
   @return $line-height;
@@ -142,7 +143,7 @@
     $font-size-rem: $font-size-rem if($important, !important, null);
     $line-height: $line-height if($important, !important, null);
 
-    @if $breakpoint == null {
+    @if not $breakpoint {
       font-size: $font-size;
       @if $govuk-typography-use-rem {
         font-size: $font-size-rem;
