--- a/package/govuk/tools/_px-to-rem.scss
+++ b/package/govuk/tools/_px-to-rem.scss
@@ -12,9 +12,9 @@
 /// @access public
 
 @function govuk-px-to-rem($value) {
-  @if (unitless($value)) {
+  @if unitless($value) {
     $value: $value * 1px;
   }
 
-  @return $value / $govuk-root-font-size * 1rem;
+  @return divideby($value, $govuk-root-font-size) * 1rem;
 }
