Add crest and organisation branding to design system and templates

--- a/app/views/full-page-examples/announcements/index.njk
+++ b/app/views/full-page-examples/announcements/index.njk
@@ -12,6 +12,7 @@ notes: Based on https://www.gov.uk/government/news/strictly-vampires-and-sausage
 
 {% block header %}
 {{ govukHeader({
+  organisationName: "Department</br>for Education",
   navigation: [
     {
       href: "#1",
