--- a/app/views/full-page-examples/applicant-details/index.njk
+++ b/app/views/full-page-examples/applicant-details/index.njk
@@ -1,4 +1,5 @@
 ---
+name: Applicant details (Legacy)
 scenario:
   As part of an online service you are asked to provide details for the
   applicant.
