--- a/app/views/full-page-examples/campaign-page/index.njk
+++ b/app/views/full-page-examples/campaign-page/index.njk
@@ -25,6 +25,7 @@ notes: >-
 
 {% block header %}
   {{ govukHeader({
+    organisationName: "Department</br>for Education",
     homepageUrl: "#",
     classes: "app-header--campaign"
   }) }}
