--- a/app/views/full-page-examples/check-your-answers/index.njk
+++ b/app/views/full-page-examples/check-your-answers/index.njk
@@ -25,6 +25,7 @@ notes: The links to change your answers are not functional.
 
 {% block header %}
   {{ govukHeader({
+    organisationName: "Department</br>for Education",
     serviceName: serviceName
   }) }}
 {% endblock %}
