--- a/app/views/full-page-examples/feedback/index.njk
+++ b/app/views/full-page-examples/feedback/index.njk
@@ -33,6 +33,7 @@ notes: Based on https://www.signin.service.gov.uk/feedback
 
 {% block header %}
   {{ govukHeader({
+    organisationName: "Department</br>for Education",
     productName: "Verify"
   }) }}
 {% endblock %}
