--- a/app/views/full-page-examples/renew-driving-licence/index.njk
+++ b/app/views/full-page-examples/renew-driving-licence/index.njk
@@ -1,4 +1,5 @@
 ---
+name: Renew driving license (Legacy)
 scenario: You want to renew your driving license.
 notes: >-
   The buttons and links on this page are not functional. This example shows
