--- a/app/views/full-page-examples/upload-your-photo/index.njk
+++ b/app/views/full-page-examples/upload-your-photo/index.njk
@@ -24,6 +24,7 @@ scenario: >-
 
 {% block header %}
   {{ govukHeader({
+    organisationName: "Department</br>for Education",
     serviceName: "Apply for a passport",
     navigation: [
         {
