--- a/app/views/layouts/_generic.njk
+++ b/app/views/layouts/_generic.njk
@@ -1,5 +1,13 @@
 {% extends "template.njk" %}
 
+{% set brandClass %}
+govuk-template__body-brand--dfe
+{% endset %}
+
+{% set organisationName %}
+Department</br>for Education
+{% endset %}
+
 {% block head %}
 
   {% if legacy %}
