--- a/src/govuk/components/header/template.njk
+++ b/src/govuk/components/header/template.njk
@@ -1,6 +1,15 @@
 <header class="govuk-header {{ params.classes if params.classes }}" role="banner" data-module="govuk-header"
         {%- for attribute, value in params.attributes %} {{attribute}}="{{value}}"{% endfor %}>
   <div class="govuk-header__container {{ params.containerClasses | default('govuk-width-container') }}">
+    {% if (params.organisationName) %}
+    <div class="govuk-header__organisation-logo">
+      <a href="{{ params.homepageUrl | default('/') }}" class="govuk-header__link govuk-header__link--homepage">
+        <span class="govuk-header__organisation-logotype-crest">
+          <span class="govuk-header__organisation-logotype-name">{{ params.organisationName | safe }}</span>
+        </span>
+      </a>
+    </div>
+    {% else %}
     <div class="govuk-header__logo">
       <a href="{{ params.homepageUrl | default('/') }}" class="govuk-header__link govuk-header__link--homepage">
         <span class="govuk-header__logotype">
@@ -46,6 +55,7 @@
         {% endif %}
       </a>
     </div>
+    {% endif %}
     {% if params.serviceName or params.navigation  %}
     <div class="govuk-header__content">
     {% if params.serviceName %}
