--- a/app/views/full-page-examples/feedback/confirm.njk
+++ b/app/views/full-page-examples/feedback/confirm.njk
@@ -7,6 +7,7 @@
 
 {% block header %}
   {{ govukHeader({
+    organisationName: "Department</br>for Education",
     productName: "Verify"
   }) }}
 {% endblock %}
