--- a/app/views/full-page-examples/upload-your-photo-success/index.njk
+++ b/app/views/full-page-examples/upload-your-photo-success/index.njk
@@ -20,6 +20,7 @@ scenario: >-
 
 {% block header %}
   {{ govukHeader({
+    organisationName: "Department</br>for Education",
     serviceName: "Apply for a passport"
   }) }}
 {% endblock %}
