--- a/app/views/layouts/_generic.njk
+++ b/app/views/layouts/_generic.njk
@@ -51,5 +51,9 @@
   {% endif %}
 
   <script src="/public/all.js"></script>
+  <script>window.GOVUKFrontend.i18n = {
+    "accordion.showThisSection": "Expand this one section",
+    "accordion.showAllSections": "Expand all the things"
+  }</script>
   <script>window.GOVUKFrontend.initAll()</script>
 {% endblock %}
