Add pluralisation support for fallback phrases

--- a/app/views/layouts/_generic.njk
+++ b/app/views/layouts/_generic.njk
@@ -55,8 +55,12 @@
     i18n: {
       "translations": {
         "accordion": {
-          "show_this_section": "Expand this one section",
-          "show_all_sections": "Expand all the things"
+          "show_this_section": "Embiggen this one section",
+          "show_all_sections": "Embiggen all the things"
+        },
+        "character_count": {
+          "characters_over_limit_one": "Ye have gone %{count} scribble too far",
+          "characters_over_limit_other": "Ye have gone %{count} scribbles too far"
         }
       }
     }
