--- a/govuk/components/radios/_index.scss
+++ b/govuk/components/radios/_index.scss
@@ -87,7 +87,7 @@
     width: $govuk-radios-size;
     height: $govuk-radios-size;
 
-    border: $govuk-border-width-form-element solid currentColor;
+    border: $govuk-border-width-form-element solid currentcolor;
     border-radius: 50%;
     background: transparent;
   }
@@ -106,10 +106,10 @@
     width: 0;
     height: 0;
 
-    border: govuk-spacing(2) solid currentColor;
+    border: govuk-spacing(2) solid currentcolor;
     border-radius: 50%;
     opacity: 0;
-    background: currentColor;
+    background: currentcolor;
   }
 
   .govuk-radios__hint {
@@ -149,7 +149,8 @@
     cursor: default;
   }
 
-  .govuk-radios__input:disabled + .govuk-radios__label {
+  .govuk-radios__input:disabled + .govuk-radios__label,
+  .govuk-radios__input:disabled ~ .govuk-hint {
     opacity: .5;
   }
 
