--- a/app/views/layouts/index.njk
+++ b/app/views/layouts/index.njk
@@ -40,7 +40,7 @@
       <h2 class="govuk-heading-m">Misc</h2>
 
       <ul class="govuk-list">
-        <li><a href="/docs" class="govuk-link">Sass Documentation</a></li>
+        <li>[Sass Documentation](https://frontend.design-system.service.gov.uk/sass-api-reference/#sass-api-reference)</li>
       </ul>
     </div>
   </div>
