Enable custom limit hint text on character count
Adds a new parameter to the character count component, `limitHint`, which allows developers to override the limit hint text (announced to screen readers, and shown visibly if JavaScript is
unavailable) for the purposes of localisation.

As this text contains dynamic information, namely the character or word limit, interpolated into it, I've made use of Nunjucks' built-in `replace` function to replace instances of `%{count}`
in the given text with the limit number. This is the same variable formatting and name as in the JavaScript for character count internationalisation.

--- a/src/govuk/components/character-count/template.njk
+++ b/src/govuk/components/character-count/template.njk
@@ -26,8 +26,11 @@
     errorMessage: params.errorMessage,
     attributes: params.attributes
   }) }}
+
+  {%- set limitHintLength = params.maxlength or params.maxwords %}
+  {%- set limitHintDefault = 'You can enter up to %{count} ' + ('words' if params.maxwords else 'characters') %}
   {{ govukHint({
-    text: 'You can enter up to ' + (params.maxlength or params.maxwords) + (' words' if params.maxwords else ' characters'),
+    text: (params.limitHint or limitHintDefault) | replace('%{count}', limitHintLength),
     id: params.id + '-info',
     classes: 'govuk-character-count__message' + (' ' + params.countMessage.classes if params.countMessage.classes)
   }) }}
