Change cookie hide button text examples
Related to https://github.com/alphagov/govuk-design-system/issues/2087

The original hide button text 'Hide this message' was raised in audits
as being unclear to users of assistive tech. This isn't hardcoded into
the component, but we do have examples which we should update with our
new recommended text: Hide cookie message.

--- a/app/views/full-page-examples/cookie-banner-client-side/index.njk
+++ b/app/views/full-page-examples/cookie-banner-client-side/index.njk
@@ -68,7 +68,7 @@ notes: >-
             "role": "alert",
             "actions": [
                 {
-                    "text": "Hide this message",
+                    "text": "Hide cookie message",
                     "type": "button",
                     "classes": "js-hide"
                 }
@@ -81,7 +81,7 @@ notes: >-
             "role": "alert",
             "actions": [
                 {
-                    "text": "Hide this message",
+                    "text": "Hide cookie message",
                     "type": "button",
                     "classes": "js-hide"
                 }
