--- a/app/views/full-page-examples/cookie-banner-essential-cookies/index.njk
+++ b/app/views/full-page-examples/cookie-banner-essential-cookies/index.njk
@@ -38,7 +38,7 @@ notes: >-
                 href: "#"
               },
               {
-                text: "Hide this message",
+                text: "Hide cookie message",
                 type: "submit",
                 name: "cookies",
                 value: "cookie-banner-dismissed",
