--- a/app/views/full-page-examples/cookie-banner-server-side/index.njk
+++ b/app/views/full-page-examples/cookie-banner-server-side/index.njk
@@ -42,7 +42,7 @@ notes: >-
             "role": "alert",
             "actions": [
                 {
-                    "text": "Hide this message",
+                    "text": "Hide cookie message",
                     "href": currentUrl,
                     "type": "button",
                     "classes": "js-hide"
