Remove demo configuration

--- a/app/views/layouts/_generic.njk
+++ b/app/views/layouts/_generic.njk
@@ -51,18 +51,5 @@
   {% endif %}
 
   <script src="/public/all.js"></script>
-  <script>window.GOVUKFrontend.initAll({
-    i18n: {
-      "translations": {
-        "accordion": {
-          "show_this_section": "Embiggen this one section",
-          "show_all_sections": "Embiggen all the things"
-        },
-        "character_count": {
-          "characters_over_limit_one": "Ye have gone %{count} scribble too far",
-          "characters_over_limit_other": "Ye have gone %{count} scribbles too far"
-        }
-      }
-    }
-  })</script>
+  <script>window.GOVUKFrontend.initAll()</script>
 {% endblock %}
