--- a/src/govuk/components/task-list/_index.scss
+++ b/src/govuk/components/task-list/_index.scss
@@ -93,7 +93,7 @@
   }
 
   .govuk-task-list__hint {
-    margin-top: 5px;
+    margin-top: govuk-spacing(1);
     color: $govuk-secondary-text-colour;
   }
 
