use govuk-spacing helper
Co-authored-by: Owen Jones <64783893+owenatgov@users.noreply.github.com>

--- a/src/govuk/components/task-list/_index.scss
+++ b/src/govuk/components/task-list/_index.scss
@@ -39,7 +39,7 @@
   }
 
   .govuk-task-list__hint {
-    margin-top: 5px;
+    margin-top: govuk-spacing(1);
     color: $govuk-secondary-text-colour;
   }
 
