--- a/src/govuk/components/task-list/_index.scss
+++ b/src/govuk/components/task-list/_index.scss
@@ -1,4 +1,8 @@
 @include govuk-exports("govuk/component/task-list") {
+  $govuk-task-list-focus-colour: govuk-colour("black");
+  $govuk-task-list-focus-background-colour: govuk-colour("yellow");
+  $govuk-task-list-hover-colour: govuk-colour("light-grey", $legacy: "grey-3");
+
   .govuk-task-list {
     @include govuk-font($size: 19);
     margin-top: 0;
@@ -22,8 +26,6 @@
 
   .govuk-task-list__item {
     margin-bottom: 0;
-    padding-top: govuk-spacing(2);
-    padding-bottom: govuk-spacing(2);
     border-bottom: 1px solid $govuk-border-colour;
     @include govuk-clearfix;
   }
@@ -32,10 +34,62 @@
     border-top: 1px solid $govuk-border-colour;
   }
 
-  .govuk-task-list__task-name {
-    @include govuk-media-query($from: 450px) {
-      float: left;
-    }
+  .govuk-task-list__task-link,
+  .govuk-task-list__task-no-link {
+    display: table;
+    width: 100%;
+    padding-top: govuk-spacing(2);
+    padding-bottom: govuk-spacing(2);
+  }
+
+  .govuk-task-list__task-link {
+    text-decoration: none;
+  }
+
+  .govuk-task-list__task-name-and-hint {
+    display: table-cell;
+    vertical-align: top;
+  }
+
+  .govuk-task-list__status-container {
+    display: table-cell;
+    padding-left: govuk-spacing(2);
+    text-align: right;
+    vertical-align: top;
+  }
+
+  .govuk-task-list__task-link__task_name {
+    display: block;
+  }
+
+  .govuk-task-list__task-link .govuk-task-list__task-link__task_name {
+    @include govuk-link-common;
+    @include govuk-link-style-default;
+    color: $govuk-link-colour;
+  }
+
+  .govuk-task-list__task-link:hover {
+    background: $govuk-task-list-hover-colour;
+  }
+
+  .govuk-task-list__task-link:hover .govuk-task-list__task-link__task_name {
+    @include govuk-link-hover-decoration;
+  }
+
+  .govuk-task-list__task-link:focus {
+    outline: none;
+  }
+
+  .govuk-task-list__task-link:focus .govuk-task-list__task-link__task_name {
+    @include govuk-focused-text;
+
+    color: $govuk-task-list-focus-colour;
+    background-color: $govuk-task-list-focus-background-colour;
+  }
+
+  .govuk-task-list__task-link__task_hint {
+    margin-top: 5px;
+    color: $govuk-secondary-text-colour;
   }
 
   .govuk-task-list__hint {
@@ -45,19 +99,12 @@
 
   .govuk-task-list__status {
     display: inline-block;
-    margin-top: govuk-spacing(2);
-    margin-bottom: govuk-spacing(1);
-    margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 0;
     padding-top: 2px;
     padding-right: 4px;
     padding-bottom: 2px;
     padding-left: 4px;
-    @include govuk-media-query($from: 450px) {
-      margin-top: 0;
-      margin-bottom: 0;
-      margin-left: govuk-spacing(1);
-      float: right;
-    }
 
     &--light-blue {
       color: govuk-shade(govuk-colour("blue"), 60);
