--- a/app/views/full-page-examples/localisation/index.njk
+++ b/app/views/full-page-examples/localisation/index.njk
@@ -164,39 +164,13 @@ scenario: >-
       }) }}
     </div>
 
-    <div class="govuk-grid-column-one-third">
 
-      <!-- The Related items component is not part of GOV.UK Frontend but will be styled if used in the Prototype Kit -->
-
-      <aside class="app-related-items" role="complementary">
-        <h2 class="govuk-heading-m" id="subsection-title">
-          Cynnwys cysylltiedig
-        </h2>
-        <nav role="navigation" aria-labelledby="subsection-title">
-          <ul class="govuk-list govuk-!-font-size-16">
-            <li class="gem-c-related-navigation__link">
-              <a class="govuk-link" href="#/gweld-neu-rannu-eich-gwybodaeth-trwydded-yrru">Gweld neu rannu eich gwybodaeth trwydded yrru</a>
-            </li>
-            <li class="gem-c-related-navigation__link">
-              <a class="govuk-link" href="#/newid-cyfeiriad-trwydded-yrru">Newid y cyfeiriad ar eich trwydded yrru</a>
-            </li>
-            <li class="gem-c-related-navigation__link">
-              <a class="govuk-link" href="#/newid-llun-trwydded-yrru">Newid y ffotograff ar eich trwydded yrru</a>
-            </li>
-            <li class="gem-c-related-navigation__link">
-              <a class="govuk-link" href="#/adnewyddu-trwydded-yrru-yn-70-oed">Adnewyddu eich trwydded yrru yn 70 oed neu’n hŷn</a>
-            </li>
-          </ul>
-        </nav>
-      </aside>
-
-    </div>
   </div>
 {% endblock %}
 
 {% block footer %}
   {{ govukFooter({
-    contentLicence: 'Mae’r holl gynnwys ar gael dan <a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/" rel="license">Drwydded y Llywodraeth Agored v3.0</a>, ac eithrio lle nodir yn wahanol',
+    contentLicence: 'Mae’r holl gynnwys ar gael dan <a class="govuk-footer__link" href="https://www.nationalarchives.gov.uk/doc/open-government-licence-cymraeg/version/3/" rel="license">Drwydded y Llywodraeth Agored v3.0</a>, ac eithrio lle nodir yn wahanol',
     copyright: '© Hawlfraint y Goron'
   }) }}
 {% endblock %}
@@ -204,16 +178,21 @@ scenario: >-
 {% block bodyEnd %}
   <script src="/public/all.js"></script>
   <script>window.GOVUKFrontend.initAll({
-    i18n: {
-      locale: "cy",
-      translations: {
-        accordion: {
-          show_all_sections: "Dangos pob adran",
+    accordion: {
+      i18n: {
+        locale: "cy",
+        translations: {
+          show_all_sections: "Show ALL THE THINGS!!!",
           hide_all_sections: "Cuddiwch bob adran",
           show_this_section: "Dangoswch yr adran hon",
           hide_this_section: "Cuddio'r adran hon"
-        },
-        character_count: {
+        }
+      }
+    },
+    character_count: {
+      i18n: {
+        locale: "cy",
+        translations: {
           characters_over_limit_zero: "Rydych chi %{count} llythyrau drosodd",
           characters_over_limit_one: "Rydych chi %{count} llythyr drosodd",
           characters_over_limit_two: "Rydych chi %{count} lythyren drosodd",
