--- a/src/govuk/components/task-list/_index.scss
+++ b/src/govuk/components/task-list/_index.scss
@@ -34,16 +34,22 @@
     border-top: 1px solid $govuk-border-colour;
   }
 
-  .govuk-task-list__task-link,
-  .govuk-task-list__task-no-link {
+  .govuk-task-list__item-container {
     display: table;
+    position: relative;
     width: 100%;
     padding-top: govuk-spacing(2);
     padding-bottom: govuk-spacing(2);
   }
 
-  .govuk-task-list__task-link {
-    text-decoration: none;
+  .govuk-task-list__task-link:after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
   }
 
   .govuk-task-list__task-name-and-hint {
@@ -62,13 +68,7 @@
     display: block;
   }
 
-  .govuk-task-list__task-link .govuk-task-list__task-link__task_name {
-    @include govuk-link-common;
-    @include govuk-link-style-default;
-    color: $govuk-link-colour;
-  }
-
-  .govuk-task-list__task-link:hover {
+  .govuk-task-list__item--with-link:hover {
     background: $govuk-task-list-hover-colour;
   }
 
