--- a/src/govuk/components/select/_index.scss
+++ b/src/govuk/components/select/_index.scss
@@ -10,9 +10,9 @@
 
     // This min-width was chosen because:
     // - it makes the Select noticeably wider than it is taller (which is what users expect)
-    // - 23ex matches the 'length-10' variant of the input component
+    // - 11.5em matches the 'length-10' variant of the input component
     // - it fits comfortably on screens as narrow as 240px wide
-    min-width: 23ex;
+    max-width: 11.5em;
     max-width: 100%;
     height: 40px;
     @if $govuk-typography-use-rem {
