Avoid searching all of node_modules for views

--- a/app/views/layouts/legacy.njk
+++ b/app/views/layouts/legacy.njk
@@ -1,4 +1,5 @@
-{% extends "govuk_template_jinja/views/layouts/govuk_template.html" %}
+{# from node_modules/govuk_template_jinja #}
+{% extends "views/layouts/govuk_template.html" %}
 
 {% set asset_path = "/vendor/govuk_template/" %}
 {% set homepage_url = "/" %}
