--- a/app/views/index.njk
+++ b/app/views/index.njk
@@ -37,10 +37,13 @@
       {% endfor %}
       </ul>
 
-      <h2 class="govuk-heading-m">Misc</h2>
+      <h2 class="govuk-heading-m">Sass Documentation</h2>
 
       <ul class="govuk-list">
-        <li><a href="/docs" class="govuk-link">Sass Documentation</a></li>
+        <li><a href="https://frontend.design-system.service.gov.uk/sass-api-reference/" class="govuk-link">Latest release</a></li>
+        {% if not isDeployedToHeroku %}
+        <li><a href="/docs" class="govuk-link">Local version</a></li>
+        {% endif %}
       </ul>
     </div>
   </div>
